mobile oneroom searchbar deleted

--- a/templates/mobile_template/oneroom/oneroom.html
+++ b/templates/mobile_template/oneroom/oneroom.html
@@ -21,71 +21,71 @@
         </header>
 
         <div class="oneRoomArea">
-            <div class="inputArea">
-                <div class="seachBox">
-                    <input type="search" placeholder=" 원룸 이름 검색." class="mobile_oneroom_search_box" style="font-size: 1.4rem">
-                    <button class="mobile_oneroom_search_btn">검색버튼</button>
-                </div>
-
-                <!-- 필터 -->
-                <button data-popup2="AI_box">AI 추천</button>
-                <div class="AI_box">
-                    <form>
-                        <fieldset>
-                            <div>
-                                <button>초기화</button>
-                            </div>
-
-                            <ul>
-                                <li>
-                                    <label>거래유형</label>
-                                    <mark>연세</mark>
-                                    <div>
-                                        <input type="radio" checked>
-                                        <label>연세</label>
-                                        <input type="radio">
-                                        <label>월세</label>
-                                        <input type="radio">
-                                        <label>전세</label>
-                                    </div>
-                                </li>
-                                <li>
-                                    <label>조증금</label>
-                                    <mark>500만원</mark>
-                                    <div>
-                                        <div class="rangeBox">
-                                            <div>
-                                                <span></span>
-                                                <span>
-                                                    <span>500만원</span>
-                                                </span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <label>월세</label>
-                                    <mark>500만원</mark>
-                                    <div>
-                                        <div class="rangeBox">
-                                            <div>
-                                                <span></span>
-                                                <span>
-                                                    <span>500만원</span>
-                                                </span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </li>
-                            </ul>
-
-                            <span class="imgBox closeBtn">
-                                닫기
-                            </span>
-                        </fieldset>
-                    </form>
-                </div>
-            </div>
+{#            <div class="inputArea">#}
+{#                <div class="seachBox">#}
+{#                    <input type="search" placeholder=" 원룸 이름 검색." class="mobile_oneroom_search_box" style="font-size: 1.4rem">#}
+{#                    <button class="mobile_oneroom_search_btn">검색버튼</button>#}
+{#                </div>#}
+{##}
+{#                <!-- 필터 -->#}
+{#                <button data-popup2="AI_box">AI 추천</button>#}
+{#                <div class="AI_box">#}
+{#                    <form>#}
+{#                        <fieldset>#}
+{#                            <div>#}
+{#                                <button>초기화</button>#}
+{#                            </div>#}
+{##}
+{#                            <ul>#}
+{#                                <li>#}
+{#                                    <label>거래유형</label>#}
+{#                                    <mark>연세</mark>#}
+{#                                    <div>#}
+{#                                        <input type="radio" checked>#}
+{#                                        <label>연세</label>#}
+{#                                        <input type="radio">#}
+{#                                        <label>월세</label>#}
+{#                                        <input type="radio">#}
+{#                                        <label>전세</label>#}
+{#                                    </div>#}
+{#                                </li>#}
+{#                                <li>#}
+{#                                    <label>조증금</label>#}
+{#                                    <mark>500만원</mark>#}
+{#                                    <div>#}
+{#                                        <div class="rangeBox">#}
+{#                                            <div>#}
+{#                                                <span></span>#}
+{#                                                <span>#}
+{#                                                    <span>500만원</span>#}
+{#                                                </span>#}
+{#                                            </div>#}
+{#                                        </div>#}
+{#                                    </div>#}
+{#                                </li>#}
+{#                                <li>#}
+{#                                    <label>월세</label>#}
+{#                                    <mark>500만원</mark>#}
+{#                                    <div>#}
+{#                                        <div class="rangeBox">#}
+{#                                            <div>#}
+{#                                                <span></span>#}
+{#                                                <span>#}
+{#                                                    <span>500만원</span>#}
+{#                                                </span>#}
+{#                                            </div>#}
+{#                                        </div>#}
+{#                                    </div>#}
+{#                                </li>#}
+{#                            </ul>#}
+{##}
+{#                            <span class="imgBox closeBtn">#}
+{#                                닫기#}
+{#                            </span>#}
+{#                        </fieldset>#}
+{#                    </form>#}
+{#                </div>#}
+{#            </div>#}
             <!-- Kakao Map -->
             <div class="kakao_map">
                 <!-- LIST -->
