--- a/static/mobile/css/marker.css
+++ b/static/mobile/css/marker.css
@@ -10,7 +10,7 @@
   opacity : 0.7;
   font-size: 14px;
   font-weight: bold;
-  transform: translateY(120%);
+
 }
 
 .custom_overlay:hover {
@@ -23,19 +23,21 @@
   width : 75px;
   height: 75px;
   font-size: 24px;
+  transform: translateY(120%);
 }
 
 .level2 {
   width : 65px;
   height: 65px;
   font-size: 22px;
-
+  transform: translateY(90%) translateX(-7%);
 }
 
 .level3 {
   width :55px;
   height: 55px;
   font-size: 18px;
+  transform: translateY(20px);
 }
 
 .level4 {
