--- a/templates/mobile_template/nav.html
+++ b/templates/mobile_template/nav.html
@@ -1,8 +1,8 @@
 <nav>
     <ul>
-        <li class="active"><a href="{% url 'mobile_oneroom' host 'm' %}">원룸</a></li>
+        <li class="active"><a href="">원룸</a></li>
         <li><a href="#">중고</a></li>
-        <li class="home"><a href="{% url 'mobile_index' host 'm' %}">홈</a></li>
+        <li class="home"><a href="">홈</a></li>
         <li><a href="#">커뮤니티</a></li>
         <li><a href="#">마이</a></li>
     </ul>
