--- a/templates/mobile_template/main/index.html
+++ b/templates/mobile_template/main/index.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load hosts %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -460,9 +461,9 @@
 
     <nav>
         <ul>
-            <li><a href="{% url 'mobile_oneroom' host 'm' %}">원룸</a></li>
+            <li><a href="{% url 'mobile_oneroom' %}">원룸</a></li>
             <li><a href="#">중고</a></li>
-            <li class="home"><a href="{% url 'mobile_index' host 'm' %}">홈</a></li>
+            <li class="home"><a href="{% url 'mobile_index' %}">홈</a></li>
             <li><a href="#">커뮤니티</a></li>
             <li><a href="#">마이</a></li>
         </ul>
