mobile url 다듬는중

--- a/templates/mobile_template/main/index.html
+++ b/templates/mobile_template/main/index.html
@@ -7,8 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Iphone 모바일 확대 방지 -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0 ,maximum-scale=1.0, user-scalable=0"
-    ">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 ,maximum-scale=1.0, user-scalable=0">
     <title>toch</title>
     <!-- jQuery CDN -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
@@ -461,7 +460,7 @@
 
     <nav>
         <ul>
-            <li><a href="{% url 'mobile_oneroom' %}">원룸</a></li>
+            <li><a href="https://m.toch.kr/oneroom/">원룸</a></li>
             <li><a href="#">중고</a></li>
             <li class="home"><a href="{% url 'mobile_index' %}">홈</a></li>
             <li><a href="#">커뮤니티</a></li>
