--- a/static/mobile/css/global.css
+++ b/static/mobile/css/global.css
@@ -151,7 +151,7 @@ header .btnArea button:nth-of-type(2){background-image: url('../images/gnbIcon02
 header .btnArea button:nth-of-type(3){background-image: url('../images/gnbIcon03.png');}
 header .btnArea button:not(:last-child){margin-right: 1.875rem;}
 
-nav{position: fixed; left: 0; bottom: 0; width: 100%; padding: 1.250rem 0; box-sizing: border-box; background-color: white; border-radius: 0.625rem 0.625rem 0 0; box-shadow: 0.625rem 2.813rem 3.125rem 0.625rem black;}
+nav{z-index: 100; position: fixed; left: 0; bottom: 0; width: 100%; padding: 1.250rem 0; box-sizing: border-box; background-color: white; border-radius: 0.625rem 0.625rem 0 0; box-shadow: 0.625rem 2.813rem 3.125rem 0.625rem black;}
 nav ul{display: flex; align-items: flex-start;}
 nav ul li:not(:last-child){margin-right: calc((100% - (5*5.938rem)) / 6);}
 nav ul li:first-child{margin-left: calc((100% - (5*5.938rem)) / 6);}
