--- a/static/mobile/css/marker.css
+++ b/static/mobile/css/marker.css
@@ -20,6 +20,13 @@
   opacity: 1;
 }
 
+.marker_clicked {
+  border : 1px solid black;
+  cursor: pointer;
+  transition: all 0.2s;
+  opacity: 1;
+}
+
 .level1 {
   width : 75px;
   height: 75px;
