detail image edited

--- a/templates/mobile_template/oneroom/oneroom_detail.html
+++ b/templates/mobile_template/oneroom/oneroom_detail.html
@@ -30,15 +30,19 @@
         </header>
 
         <section class="detailArea">
-            <div class="slider">
-                <div>
-                    <img src="../../../static/mobile/images/oneroom_detailSlider.png" alt="">
+            <!-- Slideshow container -->
+            <div class="slideshow-container">
+                <!-- Full-width images with number and caption text -->
+                <div class="mySlides fade">
+                    <img src="../../../static/mobile/images/oneroom_detailSlider.png" style="width:100%">
                 </div>
-                <div>
-                    <img src="../../../static/mobile/images/oneroom_detailSlider.png" alt="">
+
+                <div class="mySlides fade">
+                    <img src="../../../static/mobile/images/oneroom_detailSlider.png" style="width:100%">
                 </div>
-                <div>
-                    <img src="../../../static/mobile/images/oneroom_detailSlider.png" alt="">
+
+                <div class="mySlides fade">
+                    <img src="../../../static/mobile/images/oneroom_detailSlider.png" style="width:100%">
                 </div>
             </div>
 
@@ -185,7 +189,7 @@
                                         <img src="../../../static/mobile/images/filledStar.png" alt="">
                                         <img src="../../../static/mobile/images/filledStar.png" alt="">
                                         <img src="../../../static/mobile/images/filledStar.png" alt="">
-{#                                        <img src="../../../static/mobile/images/emptyStar.png" alt="">#}
+                                        {#                                        <img src="../../../static/mobile/images/emptyStar.png" alt="">#}
                                     </div>
                                     <p>예시 입니다.</p>
                                 </div>
