--- a/static/mobile/css/room-list.css
+++ b/static/mobile/css/room-list.css
@@ -25,6 +25,51 @@
     bottom: -100%;
 }
 
+/* oneroom detail modal */
+.oneroom_detail_modal_container {
+
+}
+
+.modal_bg {
+    background-color: black;
+    opacity: 0.6;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+.oneroom_detail_modal_content {
+    width: 15rem;
+    height: 15rem;
+    background-color: white;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    z-index: 2;
+}
+
+.modal_header {
+    text-align: end;
+    margin: 8px 10px 8px 0;
+    font-size: 2.5rem;
+}
+
+.modal_body {
+    text-align: center;
+    line-height: 7.2rem;
+    font-weight: bold;
+    text-decoration: underline;
+    text-underline-position: under;
+}
+
+.modal_close_btn:hover {
+    cursor: pointer;
+    opacity: 0.7;
+}
+
 .showing {
     visibility: visible;
     bottom: 0;
